--- a/package.xml
+++ b/package.xml
@@ -36,6 +36,7 @@
     <depend>cv_bridge</depend>
     <depend>nav_msgs</depend>
     <depend>pcl_ros</depend>
+    <depend>pcl_conversions</depend>
 
     <!-- export of nodelet definition XML -->
     <export>
